--- a/codes/Final code.Rmd
+++ b/codes/Final code.Rmd
@@ -1,7 +1,8 @@
 ---
-title: "Untitled"
-author: "Chenjia"
-date: "2024-03-28"
+title: "TSA Competition"
+author: "Chenjia Liu, Xiyue Zhang, Shubhangi Gupta"
+date: "2024-04-22"
+subtitle: "
 output: pdf_document
 ---
 
@@ -16,8 +17,10 @@ library(dplyr)
 library(forecast) 
 library(smooth)
 ```
-
+#Data Wrangling
+We wrangle the load, temperature and humidity data by (1) importing it, (2) converting the date column into a date object using lubridate, (3) calculating the mean load for each day using rowMeans(). For temperature and humidity, we first calculate the hourly values as the average of the value across all workstations, and then use rowmeans() to average the hourly values to daily values. Thus, temperature and humidity daily values are averages of the hourly values across all workstations. (4) checking for NAs, and (5) subsetting the data to only have the columns on the meter_id, date and daily mean. The data for all three variables extends from 1st January 2005 to 30th June 2011.
 ```{r}
+#Load Data
 load_raw <- read_excel("./data/load.xlsx")
 load <- load_raw %>%
   mutate(date = ymd(date)) %>%
@@ -25,6 +28,7 @@ load <- load_raw %>%
   filter(!is.na(daily_mean)) %>%
   select(meter_id,date,daily_mean)
 
+#Humidity Data
 humidity_raw <- read_excel("./data/relative_humidity.xlsx")
 
 humidity <- humidity_raw %>%
@@ -34,6 +38,7 @@ humidity <- humidity_raw %>%
   filter(!is.na(daily_mean)) %>%
   select(date,daily_mean)
 
+#Temperature Data
 temperature_raw <- read_excel("./data/temperature.xlsx")
 
 temperature <- temperature_raw %>%
@@ -42,11 +47,14 @@ temperature <- temperature_raw %>%
   mutate(daily_mean = rowMeans(select(., 2:29), na.rm = TRUE)) %>%
   filter(!is.na(daily_mean)) %>%
   select(date,daily_mean)
+
+temperature <- temperature[-2373,]
 ```
 
-
+#Creating a time series, training and testing data 
+We convert the load, temperature and humidity daily mean datasets into time series objects using hte msts() function. Seasonal periods are taken to be 365.25. The training data extends from 1st January 2005 to 31st May 2011 and the testing data extends from 1st-30th June 2011.
 ```{r}
-#Creating time series
+#Load Data
 ts_load <- msts(load$daily_mean, 
                            seasonal.periods =c(7,365.25),
                            start=c(2005,01,01))
@@ -57,6 +65,7 @@ ts_load_testing <- subset(ts_load,start = length(ts_load)-30)
 ts_load_training %>% mstl() %>%
   autoplot()
 
+#Temperature Data
 ts_temperature <- msts(temperature$daily_mean, 
                            seasonal.periods =c(7,365.25),
                            start=c(2005,01,01))
@@ -64,6 +73,7 @@ ts_temperature <- msts(temperature$daily_mean,
 ts_temperature_training <- subset(ts_load,end = length(ts_load)-30)
 ts_temperature_testing <- subset(ts_load,start = length(ts_load)-30)
 
+#Humidity Data
 ts_humidity <- msts(humidity$daily_mean, 
                            seasonal.periods =c(7,365.25),
                            start=c(2005,01,01))
@@ -72,9 +82,14 @@ ts_humidity_training <- subset(ts_load,end = length(ts_load)-30)
 ts_humidity_testing <- subset(ts_load,start = length(ts_load)-30)
 
 ```
+#Fitting models to the training data and forecasting on testing data
+In this section, we fit the following models to the load training data and forecast them for the next 30 days that make up the testing data: (1) STL + ETS (2) TBATS (3) 7 versions of Neural Networks - 4 using different combinations of p and P, 1 with temperature, 1 with humidity, and 1 with temperature+humidity (4) 2 versions of ARIMA - one with temperature, and one with humidity, and (5) SS Exponential smoothing
+The results of this data have been printed in a table at the end of this section.
 
+##Fitting models only on load data
 ```{r}
-#STL + ETS model
+#LOAD ONLY
+#(1) STL + ETS model
 ETS_fit <-  stlf(ts_load_training,h=30)
 autoplot(ETS_fit)
 ETS_scores <- accuracy(ETS_fit$mean,ts_load_testing)
@@ -83,81 +98,87 @@ print(ETS_scores)
 
 
 ```{r}
-# TBATS model
+# (2) TBATS model
 TBATS_fit <- tbats(ts_load_training)
 
 TBATS_forcast <- forecast(TBATS_fit, h=30)
-
-autoplot(TBATS_forcast)
-
-autoplot(ts_load_testing) +
-  autolayer(TBATS_forcast, series="TBATS",PI=FALSE)
 
 autoplot(ts_load_testing) +
   autolayer(TBATS_forcast, series="TBATS",PI=FALSE)
 
 TBATS_scores <- accuracy(TBATS_forcast$mean,ts_load_testing)
+
 print(TBATS_scores)
 ```
-
-
 ```{r}
+# (3.1) Neural Network (p=1, P=1)
 NN_fit1 <- nnetar(ts_load_training,p=1,P=1,xreg=fourier(ts_load_training, K=c(2,12)))
 NN_for1 <- forecast(NN_fit1,h=30, xreg=fourier(ts_load_training, K=c(2,12),h=30))
-autoplot(NN_for1)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for1, series="Neural Network",PI=FALSE)
 
 NN_scores1 <- accuracy(NN_for1$mean,ts_load_testing)
+
 print(NN_scores1)
 ```
 
 
 ```{r}
+#(3.2) Neural Network (p=2, P=2)
 NN_fit2 <- nnetar(ts_load_training,p=2,P=1,xreg=fourier(ts_load_training, K=c(2,12)))
 NN_for2 <- forecast(NN_fit2,h=30, xreg=fourier(ts_load_training, K=c(2,12),h=30))
-autoplot(NN_for2)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for2, series="Neural Network",PI=FALSE)
 
 NN_scores2 <- accuracy(NN_for2$mean,ts_load_testing)
+
 print(NN_scores2)
 ```
 
 ```{r}
+#(3.3) Neural Network (p=3, P=1)
 NN_fit3 <- nnetar(ts_load_training,p=3,P=1,xreg=fourier(ts_load_training, K=c(2,12)))
 NN_for3 <- forecast(NN_fit3,h=30, xreg=fourier(ts_load_training, K=c(2,12),h=30))
-autoplot(NN_for3)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for3, series="Neural Network",PI=FALSE)
 
 NN_scores3 <- accuracy(NN_for3$mean,ts_load_testing)
+
 print(NN_scores3)
 ```
 
 ```{r}
+#(3.4) Neural Network (p=1, P=0)
 NN_fit4 <- nnetar(ts_load_training,p=1,P=0,xreg=fourier(ts_load_training, K=c(2,12)))
 NN_for4 <- forecast(NN_fit4,h=30, xreg=fourier(ts_load_training, K=c(2,12),h=30))
-autoplot(NN_for4)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for4, series="Neural Network",PI=FALSE)
 
 NN_scores4 <- accuracy(NN_for4$mean,ts_load_testing)
+
 print(NN_scores4)
 ```
-
+##Forecasting with temperature and humidity
 ```{r}
+#With temperature data
 temp_regressors<- as.matrix(data.frame(fourier(ts_load_training, K=c(2,12)), "temp"= ts_temperature_training))
 
 temp_for<-forecast(ts_temperature_training,h=30)
+
 temp_regressors_for<-as.matrix(data.frame(fourier(ts_load_training, K=c(2,12),h=30), "temp"= temp_for$mean))
 
-
+#with humidity data
 hum_regressors<- as.matrix(data.frame(fourier(ts_load_training, K=c(2,12)), "hum"= ts_humidity_training))
 
 hum_for<-forecast(ts_humidity_training,h=30)
+
 hum_regressors_for<-as.matrix(data.frame(fourier(ts_load_training, K=c(2,12),h=30), "hum"= hum_for$mean))
 
+#With both temperature and humidity
 temp_hum_regressors<- as.matrix(data.frame(fourier(ts_load_training, K=c(2,12)), "temp"= ts_temperature_training, "hum"= ts_humidity_training))
 
 temp_hum_regressors_for<-as.matrix(data.frame(fourier(ts_load_training, K=c(2,12),h=30), "temp"= temp_for$mean,"hum"= hum_for$mean))
@@ -165,71 +186,72 @@ temp_hum_regressors_for<-as.matrix(data.frame(fourier(ts_load_training, K=c(2,12
 
 
 ```{r}
-# NN+Temperature
+# (3.5) Neural Network + Temperature
 NN_fit5 <- nnetar(ts_load_training,p=1,P=0,xreg=temp_regressors)
 NN_for5 <- forecast(NN_fit5,h=30, xreg=temp_regressors_for)
-autoplot(NN_for5)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for5, series="Neural Network",PI=FALSE)
 
 NN_scores5 <- accuracy(NN_for5$mean,ts_load_testing)
+
 print(NN_scores5)
 
 ```
 
 ```{r}
-# NN+humidity
+# (3.6) Neural Network + Humidity
 NN_fit6 <- nnetar(ts_load_training,p=1,P=0,xreg=hum_regressors)
 NN_for6 <- forecast(NN_fit6,h=30, xreg=hum_regressors_for)
-autoplot(NN_for6)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for6, series="Neural Network",PI=FALSE)
 
 NN_scores6 <- accuracy(NN_for6$mean,ts_load_testing)
+
 print(NN_scores6)
 ```
 
 ```{r}
-# NN+humidity+temperature
+# (3.7) Neural Network + Temperature + Humidity
 NN_fit7 <- nnetar(ts_load_training,p=1,P=0,xreg=temp_hum_regressors)
 NN_for7 <- forecast(NN_fit7,h=30, xreg=temp_hum_regressors_for)
-autoplot(NN_for7)
+
 autoplot(ts_load_testing) +
   autolayer(NN_for7, series="Neural Network",PI=FALSE)
 
 NN_scores7 <- accuracy(NN_for7$mean,ts_load_testing)
+
 print(NN_scores7)
 ```
-
-
 ```{r}
-#Arima+Temperature
+# (4.1) Arima + Temperature
 ARIMA_fit1<-auto.arima(ts_load_training,seasonal= FALSE, lambda=0,xreg=temp_regressors)
 ARIMA_for1<-forecast(ARIMA_fit1,xreg=temp_regressors_for,h=30)
 
-autoplot(ARIMA_for1)
 autoplot(ts_load_testing) +
   autolayer(ARIMA_for1, series="ARIMA",PI=FALSE)
 
 ARIMA_scores1 <- accuracy(ARIMA_for1$mean,ts_load_testing)
+
 print(ARIMA_scores1)
 ```
 
 ```{r}
-#Arima+humidity
+# (4.2) Arima + humidity
 ARIMA_fit2<-auto.arima(ts_load_training,seasonal= FALSE, lambda=0,xreg=hum_regressors)
 ARIMA_for2<-forecast(ARIMA_fit2,xreg=hum_regressors_for,h=30)
 
-autoplot(ARIMA_for2)
 autoplot(ts_load_testing) +
   autolayer(ARIMA_for2, series="ARIMA",PI=FALSE)
 
 ARIMA_scores2 <- accuracy(ARIMA_for2$mean,ts_load_testing)
+
 print(ARIMA_scores2)
 ```
 
 ```{r}
-#SS Exponential smoothing
+#(5) SS Exponential smoothing
 
 SSES_fit1 <- es(ts_load_training,model="ZZZ",h=30,holdout=FALSE)
 plot(SSES_fit1)
@@ -237,22 +259,56 @@ SSES_scores1 <- accuracy(SSES_fit1$forecast,ts_load_testing)
 print(SSES_scores1)
 ```
 
-
+##Printing the scores of all the above fitted models in one table
 ```{r}
 scores <- as.data.frame(
   rbind(TBATS_scores, NN_scores1,NN_scores2, NN_scores3,NN_scores4, NN_scores5, NN_scores6, ARIMA_scores1)
   )
 row.names(scores) <- c("TBATS_scores", "NN_scores1","NN_scores2","NN_scores3","NN_scores4","NN_scores5","NN_scores6", "ARIMA_scores1")
+scores
+```
+
+#Forecasting daily demand for July 2011
+In this section, we use the fitted models to forecast daily demand for July 2011. These results have been uploaded on Kaggle. We forecast the following models: (1) SS Exponential Smoothing (2) TBATS (3) 5 Neural Network Models - 2 with different combinations of p and P, one with temperature, one with humidity, and one with temperature and humidity (4) two ARIMA models - one with temperature, and one with humidity
+
+##Forecasting only load data
+
+```{r}
+# (1) SS Exponential smoothing
+SSES_fit_load <- es(ts_load,model="ZZZ",h=31,holdout=FALSE)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-SSES_fit_load$forecast
+July_SSES <-data.frame(date=date, load=load)
+July_SSES
+write.csv(July_SSES, file = "July_SSES.csv", row.names = FALSE)
+```
+```{r}
+# (2) TBATS
+TBATS_fit_load <- tbats(ts_load)
+TBATS_forcast_load <- forecast(TBATS_fit_load, h=31)
+
+autoplot(ts_load) +
+  autolayer(TBATS_forcast_load, series="TBATS",PI=FALSE)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-TBATS_forcast_load$mean
+July_TBATS<-data.frame(date=date, load=load)
+July_TBATS
+write.csv(July_TBATS, file = "July_TBATS.csv", row.names = FALSE)
 ```
 
 ```{r}
-# Fit load using NN1
+# (3.1) Neural Network (p=1, P=1)
 NN_fit1_load <- nnetar(ts_load,p=1,P=1,xreg=fourier(ts_load, K=c(2,12)))
 NN_for1_load <- forecast(NN_fit1_load,h=31, xreg=fourier(ts_load, K=c(2,12),h=31))
-autoplot(NN_for1_load)
+
 autoplot(ts_load) +
   autolayer(NN_for1_load, series="Neural Network",PI=FALSE)
 
+#Exporting into a CSV
 date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
 load<-NN_for1_load$mean
 July_NN1<-data.frame(date=date, load=load)
@@ -261,13 +317,14 @@ write.csv(July_NN1, file = "July_NN1.csv", row.names = FALSE)
 ```
 
 ```{r}
-# Fit load using NN4
+# (3.2) Neural Network (p=1, P=0)
 NN_fit4_load <- nnetar(ts_load,p=1,P=0,xreg=fourier(ts_load, K=c(2,12)))
 NN_for4_load <- forecast(NN_fit4_load,h=31, xreg=fourier(ts_load, K=c(2,12),h=31))
-autoplot(NN_for4_load)
+
 autoplot(ts_load) +
   autolayer(NN_for4_load, series="Neural Network",PI=FALSE)
 
+#Exporting into a CSV
 date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
 load<-NN_for4_load$mean
 July_NN4<-data.frame(date=date, load=load)
@@ -275,19 +332,85 @@ July_NN4
 write.csv(July_NN4, file = "July_NN4.csv", row.names = FALSE)
 ```
 
+##Forecasting load data with regressors for temperature and humidity
 ```{r}
-# Fit load using TBATS
-TBATS_fit_load <- tbats(ts_load)
-TBATS_forcast_load <- forecast(TBATS_fit_load, h=31)
-autoplot(TBATS_forcast_load)
-autoplot(ts_load) +
-  autolayer(TBATS_forcast_load, series="TBATS",PI=FALSE)
+#Temperature
+temp_regressors_load<- as.matrix(data.frame(fourier(ts_load, K=c(2,12)), "temp"= ts_temperature))
 
-date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
-load<-TBATS_forcast_load$mean
-July_TBATS<-data.frame(date=date, load=load)
-July_TBATS
-write.csv(July_TBATS, file = "July_TBATS.csv", row.names = FALSE)
+temp_for_load<-forecast(ts_temperature,h=31)
+temp_regressors_for_load<-as.matrix(data.frame(fourier(ts_load, K=c(2,12),h=31), "temp"= temp_for_load$mean))
+
+#Humidity
+
+hum_regressors_load<- as.matrix(data.frame(fourier(ts_load, K=c(2,12)), "hum"= ts_humidity))
+
+hum_for_load<-forecast(ts_humidity,h=31)
+hum_regressors_for_load<-as.matrix(data.frame(fourier(ts_load, K=c(2,12),h=31), "hum"= hum_for_load$mean))
+
+#Temperature & Humidity
+temp_hum_regressors_load<- as.matrix(data.frame(fourier(ts_load, K=c(2,12)), "temp"= ts_temperature, "hum"= ts_humidity))
+
+temp_hum_regressors_for_load<-as.matrix(data.frame(fourier(ts_load, K=c(2,12),h=31), "temp"= temp_for_load$mean,"hum"= hum_for_load$mean))
 ```
 
+```{r}
+# (3.3) Neural Network + Temperature
+NN_fit5_load <- nnetar(ts_load,p=1,P=0,xreg=temp_regressors_load)
+NN_for5_load <- forecast(NN_fit5_load,h=31, xreg=temp_regressors_for_load)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<- NN_for5_load$mean
+July_NN5 <-data.frame(date=date, load=load)
+write.csv(July_NN5, file = "July_NN5.csv", row.names = FALSE)
+```
+
+```{r}
+# (3.4) Neural Network + Humidity
+NN_fit6_load <- nnetar(ts_load,p=1,P=0,xreg=hum_regressors_load)
+NN_for6_load <- forecast(NN_fit6_load,h=31, xreg=hum_regressors_for_load)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-NN_for6_load$mean
+July_NN6 <-data.frame(date=date, load=load)
+write.csv(July_NN6, file = "July_NN6.csv", row.names = FALSE)
+```
+
+```{r}
+# (3.5) Neural Network + Temperature + Humidity
+NN_fit7_load <- nnetar(ts_load,p=1,P=0,xreg=temp_hum_regressors_load)
+NN_for7_load <- forecast(NN_fit7_load,h=31, xreg=temp_hum_regressors_for_load)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-NN_for7_load$mean
+July_NN7 <-data.frame(date=date, load=load)
+write.csv(July_NN7, file = "July_NN7.csv", row.names = FALSE)
+```
+
+```{r}
+# (4.1) Arima+Temperature
+ARIMA_fit1_load<-auto.arima(ts_load,seasonal= FALSE, lambda=0,xreg=temp_regressors_load)
+ARIMA_for1_load<-forecast(ARIMA_fit1_load,xreg=temp_regressors_for_load,h=31)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-ARIMA_for1_load$mean
+ARIMA_for1_load <-data.frame(date=date, load=load)
+write.csv(ARIMA_for1_load, file = "July_ARIMA1.csv", row.names = FALSE)
+```
+
+```{r}
+# (4.2) Arima+humidity
+ARIMA_fit2_load<-auto.arima(ts_load,seasonal= FALSE, lambda=0,xreg=hum_regressors_load)
+ARIMA_for2_load<-forecast(ARIMA_fit2_load,xreg=hum_regressors_for_load,h=31)
+
+#Exporting into a CSV
+date <- seq(ymd("2011-07-01"), ymd("2011-07-31"), by = "days")
+load<-ARIMA_for2_load$mean
+ARIMA_fit2_load <-data.frame(date=date, load=load)
+write.csv(ARIMA_fit2_load, file = "July_ARIMA2.csv", row.names = FALSE)
+
+```
 
